argocd/local-git.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  labels:
    app: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /tmp/local-git-repo
              name: local-git-repo
              readOnly: true
      volumes:
        - name: local-git-repo
          hostPath:
            path: /tmp/local-git-repo
            type: Directory
